2003-10-28  Derek Price  <derek@ximbiot.com>

	* sever.h: Add the standard copyright notice.

2003-10-28  Derek Price  <derek@ximbiot.com>

	* lock.c: Remove some suggestions which have already been implemented
	or which have become obsolete from the header comment.

2003-10-26  Derek Price  <derek@ximbiot.com>

	* sanity.sh (join6): Fix a few typos in the last test and remove a
	misplaced test.

2003-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (parseroot): Use dokeep function.

	* sanity.sh (parseroot): Perform this test in a subdirectory.
	It should avoid problems on case-insensitive systems where 
	CVSROOT and cvsroot are the same directory (eg, MacOS X).

2003-10-24  Derek Price  <derek@ximbiot.com>

	* update.c (join_file): Restore the optimization Mark recently removed,
	but fix it.  Move one other optimization up since it needs to be
	checked for first.  Add bew status messages like merge_file produces
	when the requested diff has already been applied to the destination.
	Expand header comment.
	* sanity.sh (join6): Add tests for the new error messages.
	(import-113, join-admin-2, diffmerge1): Fix collateral damage.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* update.c (merge_file): Optimize & eliminate code.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* recurse.c (do_recursion): Assert that ignoring the return value of
	Name_Repository is not a memory leak.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* repos.c (Name_Repository): Replace a FIXME with the improved error
	message it requested.
	* sanity.sh (errmsg3): New test for the above.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* patch.c (patch_proc): Avoid memory leak.
	(Patch from Mark D. Baushke  <mdb@cvshome.org>.)
	(patch_proc): Reformat a few long lines for readability.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* vers_ts.c (Version_TS): Move variable declaration inside the only
	block where it is used and remove uneeded reinitialization.
